--- a/vite-project/package.json
+++ b/vite-project/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.7.2",
@@ -22,6 +23,7 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.3",
     "autoprefixer": "^10.4.21",
+    "gh-pages": "^6.3.0",
     "less": "^4.3.0",
     "postcss": "^8.5.5",
     "tailwindcss": "^4.1.10",
